# arithmetic_operations_flask

./: .alert-menta.user.yaml  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: alert-menta.yaml
calc_api/: __init__.py  app.py  config.py  errors.py  operations.py  routes.py  validation.py
tests/: __init__.py  test_app.py
