[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calc-api"
version = "0.1.0"
description = "Simple Calculator API using Flask"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "pacificbelt30", email = "57101176+pacificbelt30@users.noreply.github.com" },
]

dependencies = [
    "flask>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "pynvim>=0.5.2",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
